@@ -9,21 +9,24 @@ int obuf_sign_pad(obuf* out, int sign, unsigned width, char pad)
   return 1;
 }
 
-static int obuf_putiw_rec(obuf* out, unsigned long data, int sign,
-			  unsigned width, char pad)
+static int obuf_putsnumw_rec(obuf* out, long data, int sign,
+			     unsigned width, char pad,
+			     unsigned base, const char* digits)
 {
   if (width) --width;
-  if (data >= 10) {
-    if (!obuf_putiw_rec(out, data/10, sign, width, pad)) return 0;
+  if (data >= base) {
+    if (!obuf_putsnumw_rec(out, data/base, sign, width, pad, base, digits))
+      return 0;
   }
   else {
     if (!obuf_sign_pad(out, sign, width, pad)) return 0;
   }
-  return obuf_putc(out, (data % 10) + '0');
+  return obuf_putc(out, (data % base) + '0');
 }
 
 /** Write a signed integer to the \c obuf with optional padding. */
-int obuf_putiw(obuf* out, long data, unsigned width, char pad)
+int obuf_putsnumw(obuf* out, long data, unsigned width, char pad,
+		  unsigned base, const char* digits)
 {
   int sign;
 
@@ -33,7 +36,7 @@ int obuf_putiw(obuf* out, long data, unsigned width, char pad)
     data = -data;
     if (width) -- width;
   }
-  if (data < 10) {
+  if (data < base) {
     if (width) {
       if (!obuf_sign_pad(out, sign, width-1, pad)) return 0;
     }
@@ -41,5 +44,17 @@ int obuf_putiw(obuf* out, long data, unsigned width, char pad)
       if (!obuf_putc(out, '-')) return 0;
     return obuf_putc(out, data + '0');
   }
-  return obuf_putiw_rec(out, data, sign, width, pad);
+  return obuf_putsnumw_rec(out, data, sign, width, pad, base, digits);
+}
+
+static char dec_digits[10] = "0123456789";
+
+int obuf_putiw(obuf* out, long data, unsigned width, char pad)
+{
+  return obuf_putsnumw(out, data, width, pad, 10, dec_digits);
+}
+
+int obuf_puti(obuf* out, long data)
+{
+  return obuf_putsnumw(out, data, 0, 0, 10, dec_digits);
 }
